[package]
name = "poc-batch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "core_crypto"

[dependencies]
async-lock = "3.4"
async-trait = "0.1"
thiserror = "1.0"
uniffi = { version = "0.28", features = ["build"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }

